--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "toggl-app",
   "private": true,
-  "version": "1.2.3",
+  "version": "1.2.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:deploy": "node scripts/build-with-server-files.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
